# perun

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  meson.build  pyproject.toml  tox.ini
.github/workflows/: release.yml  ubuntu.yml
.github/workflows/actions/setup/: action.yml
docs/: Makefile  cli.rst  collectors.rst  conf.py  config.rst  degradation.rst  internals.rst  logs.rst  postprocessors.rst  views.rst
docs/_static/templates/: degradation_api.py  supported_module_names.py  supported_module_names_collectors.py  supported_module_names_vcs.py  supported_module_names_views.py
perun/: __init__.py  cli.py  meson.build
perun/check/: __init__.py  __init__.pyi  detection_kit.py  factory.py  meson.build  nonparam_kit.py
perun/check/methods/: abstract_base_checker.py  average_amount_threshold.py  best_model_order_equality.py  exclusive_time_outliers.py  fast_check.py  integral_comparison.py  linear_regression.py  local_statistics.py  polynomial_regression.py
perun/cli_groups/: check_cli.py  collect_cli.py  config_cli.py  import_cli.py  meson.build  run_cli.py  utils_cli.py
perun/collect/: __init__.py
perun/collect/bounds/: parser.py  run.py
perun/collect/complexity/: configurator.py  makefiles.py  run.py  symbols.py
perun/collect/kperf/: __init__.py  parser.py  run.py
perun/collect/memory/: backtrace.c  filter.py  meson.build  parsing.py  run.py  syscalls.py
perun/collect/time/: __init__.py  run.py
perun/collect/trace/: collect_engine.py  configuration.py  probes.py  processes.py  run.py  strategy.py  threads.py  values.py  watchdog.py
perun/collect/trace/ebpf/: ebpf.py  engine.py  program.py
perun/collect/trace/optimizations/: call_graph.py  call_graph_levels.py  cg_projection.py  diff_tracing.py  dynamic_baseline.py  dynamic_sampling.py  dynamic_stats.py  optimization.py  static_baseline.py  structs.py
perun/collect/trace/optimizations/resources/: angr_provider.py  manager.py  perun_call_graph.py  perun_dynamic_stats.py
perun/collect/trace/systemtap/: engine.py  parse_compact.py  script_compact.py
perun/deltadebugging/: __init__.py  factory.py  meson.build
perun/fuzz/: __init__.py  __init__.pyi  factory.py  filesystem.py  filetype.py  helpers.py  interpret.py  meson.build  randomizer.py  structs.py
perun/fuzz/evaluate/: by_coverage.py  by_perun.py
perun/fuzz/methods/: binary.py  textfile.py  xml.py
perun/logic/: commands.py  config.py  config_templates.py  index.py  locks.py  pcs.py  runner.py  stats.py  store.py  temp.py
perun/postprocess/: __init__.py
perun/postprocess/kernel_regression/: methods.py  run.py
perun/postprocess/moving_average/: methods.py  run.py
perun/postprocess/regression_analysis/: __init__.py  data_provider.py  derived.py  generic.py  methods.py  regression_models.py  run.py  specific.py  tools.py  transform.py
perun/postprocess/regression_analysis/extensions/: plot_models.py
perun/postprocess/regressogram/: methods.py  run.py
perun/profile/: __init__.py  __init__.pyi  convert.py  factory.py  helpers.py  import.py  imports.py  meson.build  query.py  stats.py
perun/scripts/: flamegraph.pl
perun/select/: abstract_base_selection.py  factory.py  meson.build  whole_repository_selection.py
perun/templates/: __init__.py  check.jinja2  diff_view_datatables.html.jinja2  diff_view_flamegraph.html.jinja2  diff_view_report.html.jinja2  diff_view_sankey.html.jinja2  diff_view_sankey_incremental.html.jinja2  factory.py  filters.py  macros_html_widgets.html.jinja2  macros_profile_overview.html.jinja2  meson.build  ssp_report.html.jinja2  ssp_table.html.jinja2
perun/templates/style/: division_anchor.css  general_setup.css  general_sidebar.css  layout.css  notes_sidebar.css  pins.css  side_panel.css  tag.css
perun/testing/: asserts.py  mock_results.py  utils.py
perun/utils/: __init__.py  decorators.py  exceptions.py  log.py  mapping.py  meson.build  metrics.py  streams.py  structs.py  timestamps.py
perun/utils/common/: cli_kit.py  common_kit.py  diff_kit.py  script_kit.py  traces_kit.py  view_kit.py
perun/utils/structs/: check_structs.py  collect_structs.py  common_structs.py  diff_structs.py  meson.build  postprocess_structs.py
perun/vcs/: abstract_repository.py  git_repository.py  meson.build  svs_repository.py  vcs_kit.py
perun/view/: __init__.py
perun/view/bars/: factory.py  run.py
perun/view/flamegraph/: flamegraph.py  run.py
perun/view/flow/: factory.py  run.py
perun/view/scatter/: factory.py  run.py
perun/view/tableof/: run.py
perun/view_diff/: __init__.py  meson.build
perun/view_diff/datatables/: meson.build  run.py
perun/view_diff/flamegraph/: run.py
perun/view_diff/report/: __init__.py  run.py
perun/view_diff/sankey/: meson.build  run.py
perun/view_diff/sankey_incremental/: meson.build  run.py
perun/view_diff/short/: meson.build  run.py
perun/view_diff/table/: run.py
perun/workload/: __init__.py  external_generator.py  generator.py  integer_generator.py  singleton_generator.py  string_generator.py  textfile_generator.py
tests/: conftest.py  test_bargraphs.py  test_cli.py  test_collect.py  test_config.py  test_degradations.py  test_delta_debugging.py  test_detection_methods.py  test_diff_views.py  test_flame_graph.py  test_flowgraphs.py  test_fuzzing.py  test_generators.py  test_imports.py  test_init.py  test_log.py  test_metrics.py  test_models_transformations.py  test_pcs.py  test_profile.py  test_profile_converters.py  test_query.py  test_regression_analysis.py  test_regressogram.py  test_remove.py  test_scatter_plot.py  test_select.py  test_stats.py  test_status.py  test_store.py  test_table.py  test_temp.py  test_tracer.py  test_utils.py  test_vcs.py
tests-perf/: test_performance.py
tests/profiles/diff_profiles/: kperf-baseline-stats-metadata.perf  kperf-target-stats-metadata.perf  ktrace-baseline.perf  ktrace-target.perf
tests/sources/imports/: import-elk.json  import.csv  import.data  import.script  import.stack  machine_info.json  metadata.json
utils/: generate_machine_info.sh
(+3 files in other folders)
