perun_utils_structs_dir = perun_utils_dir / 'structs'

perun_utils_structs_files = files(
    '__init__.py',
    'check_public.py',
    'collect_public.py',
    'common_structs.py',
    'postprocess_public.py',
)

py3.install_sources(
    perun_utils_structs_files,
    subdir: perun_utils_structs_dir
)
