perun_utils_structs_dir = perun_utils_dir / 'structs'

perun_utils_structs_files = files(
    '__init__.py',
    'check_structs.py',
    'collect_structs.py',
    'common_structs.py',
    'diff_structs.py',
    'postprocess_structs.py',
)

py3.install_sources(
    perun_utils_structs_files,
    subdir: perun_utils_structs_dir
)
